123025/advanced/03-igw.tf
# ===================================
# Internet Gateway
# ===================================

resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id

  tags = merge(
    local.common_tags,
    {
      Name = local.igw_name
    }
  )
}
